fixing alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
   font: 15px/1.5,Arial,Helvetica, sans-serif;
   padding: 0;
   margin: 0;
-  height: 1500vh;
+  height: 1800vh;
   width: 100%;
   /* height: 100%; */
 
@@ -227,7 +227,7 @@ h8{
 
 .contactgb{
   margin-right: 5px;
-  margin-left: 500px;
+  /* margin-left: 500px; */
   margin-bottom: 10px;
   margin-top: 100px;
   float:left;
@@ -238,14 +238,16 @@ h8{
   margin-bottom: 10px;
   margin-top: 116.5px;
   float:left;
+  float:center;
 }
 
 .contactem{
   margin-right: 5px;
   margin-left: 500px;
   margin-bottom: 10px;
-  margin-top: 86px;
+  margin-top: 98px;
   float:left;
+    float:center;
 }
 
 .emailC{
@@ -266,6 +268,55 @@ h8{
 
 
 }
+
+.contacts{
+
+  /* float:center;
+  margin-left: 28%; */
+    /* width: 100%; */
+
+    margin: 0 auto;
+
+    display:inline-block;
+    /* position: relative;
+    text-align: center; */
+
+
+}
+
+.box{
+  width: 300px;
+  height: 200px;
+  /* margin-top: 100px; */
+    margin-top: 12%;
+  /* display:inline-block; */
+
+}
+
+#git{
+  float:left;
+
+}
+
+#linked{
+
+  float:left;
+
+
+}
+
+#mails{
+
+  float:left;
+
+}
+
+#pic{
+
+  margin: 0 auto;
+
+}
+
 
 
 .gb{
@@ -473,6 +524,7 @@ display: inline-block;
     /* opacity: 0.8;
     filter: alpha(opacity=60); */
     margin-bottom: 7000px;
+
 
 }
 
